교사연수/ 일반구매 강의실 구분

--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -33,7 +33,7 @@
                             <p>275-11-01405</p>
                         </li>
                         <li>
-                            <span>통신파매업 신고</span>
+                            <span>통신판매업 신고</span>
                             <p>제 2020-수원영통-0409 호</p>
                         </li>
                         <li>
