--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -34,12 +34,12 @@
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/animate.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/jquery.modal.css" />
-<!--    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>-->
-<!--    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>-->
+    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>
+    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
 
     <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-<!--    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>-->
+    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
     <script src="{% static 'resource/js/common.js' %}"></script>
     <script src="{% static 'resource/js/wrest.js' %}"></script>
 
