--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -38,8 +38,8 @@
             <img src="{% static 'resource/img/main/img_sec02_01.png' %}" alt="코딩키트를 사면 온라인 강의는 무료!">
             <div class="text_area">
                     <span class="sec_title">
-                        코딩키트를 사면<br/>
-                        온라인 강의는 무료!
+                       온라인 코딩 학습 + <br/>
+                        메이커 코딩 키트
                     </span>
                 <p>
                     설명서를 따라 만들어보는 코딩 학습 No!<br/>
