--- a/main/templates/payment/order_back.html
+++ b/main/templates/payment/order_back.html
@@ -397,15 +397,15 @@
                                   {% else%}
                                       {% for userDetail in user_detail %}
                                        <div class="row padding-all-15 col-xs-3 border-dashed-right" style="display:inline-block;">
-                                           <div class="font-16">
-                                               <input name="addr" type="radio" value="1"checked>
-                                               <strong>{{userDetail.regi_name}}</strong>(기본 배송지)
-                                           </div>
-                                           <div class="font-16">
-                                               {{userDetail.regi_receiver1_add02}}
-                                               {{userDetail.regi_receiver1_add03}}
-                                               ({{userDetail.regi_receiver1_add01}})
-                                           </div>
+<!--                                           <div class="font-16">-->
+<!--                                               <input name="addr" type="radio" value="1"checked>-->
+<!--                                               <strong>{{userDetail.regi_name}}</strong>(기본 배송지)-->
+<!--                                           </div>-->
+<!--                                           <div class="font-16">-->
+<!--                                               {{userDetail.regi_receiver1_add02}}-->
+<!--                                               {{userDetail.regi_receiver1_add03}}-->
+<!--                                               ({{userDetail.regi_receiver1_add01}})-->
+<!--                                           </div>-->
                                             <div class="font-16">
                                                {{userDetail.regi_phone}}
                                            </div>
