--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -12,10 +12,11 @@
             </h1>
         </div>
             <div class="join_area">
+                <h2>회원가입</h2>
                 <form id="register_form" method="post" action="/register/">
                     {% csrf_token %}
                     <div class="accountInfo">
-                        <h2>계정 정보</h2>
+
                         <ul>
                              <li>
                              </li>
@@ -54,28 +55,23 @@
                             </li>
                         </ul>
                     </div>
+
+
+                    <div class="input_area"  style=" font-size:15px; padding-top:30px; padding-left:150px;">
+                        <input type="checkbox" name="terms01" id="terms01" class="chk_terms" onClick="javascript:termFlag();" required>
+                        <label for="terms01"></label>
+                            <a href="#modal02" style=" text-decoration: underline; ">서비스 이용약관</a> 및
+                             <a href="#modal01" style=" text-decoration: underline;">개인정보 제공</a>에 동의해주세요.
+                    </div>
+
+                    <div class="terms_area">
+                     <a href="javascript:void(0);" class="btn login" onClick="javascript:regi_submit();">회원가입</a>
+                    </div>
                 </form>
 
-                <div class="terms_area">
-                    <h2>이용약관</h2>
-                    <div class="terms01">
-                        <div class="input_area">
-                            <input type="checkbox" name="terms01" id="terms01" class="chk_terms" onClick="javascript:termFlag();" required>
-                            <label for="terms01">이용약관에 동의합니다.</label>
-                            <a href="#modal02" class="btn">내용 보기</a>
-                        </div>
-                    </div>
-                    <h2>개인정보처리방침</h2>
-                    <div class="terms02">
-                        <div class="input_area">
-                            <input type="checkbox" name="terms02" id="terms02" class="chk_terms" required>
-                            <label for="terms02">개인정보처리방침에 동의합니다.</label>
-                            <a href="#modal01" class="btn">내용 보기</a>
-                        </div>
-                    </div>
-                    <a href="javascript:void(0);" class="btn login" onClick="javascript:regi_submit();">회원가입</a>
-                </div>
+
             </div>
+
     </div>
 
     {% include "common/banner_bottom.html" %}
@@ -86,11 +82,17 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/jquery.modal.css" />
 <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>
 <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
+<script type="text/javascript" src="http://jsgetip.appspot.com/?ip"></script>
+
 
 <script>
 
+    var your_ip = ip();    # ip()함수 선언
+    alert(your_ip);    # alert()으로 알림창에 IP정보 보는 방법
+
     var chkId = 0;
     var chkAddr = 0 ;
+
 
     function regi_checkId()
     {
@@ -240,13 +242,6 @@
             return false;
         }
 
-        if($("input:checkbox[name=terms02]").is(":checked") == false)
-        {
-            $("#res_msg").text("개인정보 처리방침에 동의해주세요.");
-            $('div.modal').modal();
-            $("input:checkbox[name=terms02]").focus();
-            return false;
-        }
 
         document.getElementById('register_form').submit();
     }
